Resolve some complict from test