@@ -10,7 +10,6 @@ import org.junit.jupiter.api.Test;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 
@@ -25,7 +24,7 @@ class StorageUsuarioCsvImplTest {
     public void setUp() throws IOException {
         storage = new StorageUsuarioCsvImpl();
         testFile = File.createTempFile("StorageUsuarioCsvImplTest", ".csv");
-        Files.write(testFile.toPath(), "ID,Nombre,UserName,Email,createdAt,updatedAt\n1,John Doe,johndoe,john@example.com,2023-10-01,2023-10-05\n2,Jane Smith,janesmith,jane@example.com,2023-09-01,2023-10-01".getBytes());
+        Files.write(testFile.toPath(), "ID,Nombre,UserName,Email,createdAt,updatedAt\n1,John Doe,johndoe,john@example.com,2023-10-01T00:00:00,2023-10-05T00:00:00\n2,Jane Smith,janesmith,jane@example.com,2023-09-01T00:00:00,2023-10-01T00:00:00".getBytes());
     }
 
     @AfterEach
@@ -40,16 +39,16 @@ class StorageUsuarioCsvImplTest {
 
         assertAll("usuarios",
                 () -> assertEquals(2, usuarioList.size()),
-                () -> assertEquals(1L, usuarioList.getFirst().getId()),
-                () -> assertEquals("John Doe", usuarioList.getFirst().getNombre()),
-                () -> assertEquals("johndoe", usuarioList.getFirst().getUserName()),
-                () -> assertEquals(LocalDate.of(2023, 10, 1), usuarioList.getFirst().getCreatedAt()),
-                () -> assertEquals(LocalDate.of(2023, 10, 5), usuarioList.getFirst().getUpdatedAt()),
+                () -> assertEquals(1L, usuarioList.get(0).getId()),
+                () -> assertEquals("John Doe", usuarioList.get(0).getNombre()),
+                () -> assertEquals("johndoe", usuarioList.get(0).getUserName()),
+                () -> assertEquals(LocalDateTime.of(2023, 10, 1, 0, 0, 0), usuarioList.get(0).getCreatedAt()),
+                () -> assertEquals(LocalDateTime.of(2023, 10, 5, 0, 0, 0), usuarioList.get(0).getUpdatedAt()),
                 () -> assertEquals(2L, usuarioList.get(1).getId()),
                 () -> assertEquals("Jane Smith", usuarioList.get(1).getNombre()),
                 () -> assertEquals("janesmith", usuarioList.get(1).getUserName()),
-                () -> assertEquals(LocalDate.of(2023, 9, 1), usuarioList.get(1).getCreatedAt()),
-                () -> assertEquals(LocalDate.of(2023, 10, 1), usuarioList.get(1).getUpdatedAt())
+                () -> assertEquals(LocalDateTime.of(2023, 9, 1, 0, 0, 0), usuarioList.get(1).getCreatedAt()),
+                () -> assertEquals(LocalDateTime.of(2023, 10, 1, 0, 0, 0), usuarioList.get(1).getUpdatedAt())
         );
     }
 
@@ -61,18 +60,18 @@ class StorageUsuarioCsvImplTest {
                         .nombre("Pablo Motos")
                         .email("pablomotos@gmail.com")
                         .userName("pablomotos")
-                        .createdAt(LocalDateTime.of(2023, 1, 1))
-                        .updatedAt(LocalDateTime.of(2023, 10, 1))
+                        .createdAt(LocalDateTime.of(2023, 1, 1, 0, 0))
+                        .updatedAt(LocalDateTime.of(2023, 10, 1, 0, 0))
                         .build(),
                 Usuario.builder()
                         .id(2L)
                         .nombre("Juan Perez")
                         .email("juanperez@gmail.com")
                         .userName("juanperez")
-                        .createdAt(LocalDateTime.of(2023, 1, 2))
-                        .updatedAt(LocalDateTime.of(2023, 10, 2))
+                        .createdAt(LocalDateTime.of(2023, 1, 2, 0, 0))
+                        .updatedAt(LocalDateTime.of(2023, 10, 2, 0, 0))
                         .build()
-        );
+            );
 
         Observable<Usuario> userObservable = Observable.fromIterable(usuarioList);
 
@@ -85,17 +84,17 @@ class StorageUsuarioCsvImplTest {
 
         assertAll("exportedUsuarios",
                 () -> assertEquals(3, lines.size()),
-                () -> assertEquals("ID,Nombre,UserName,Email,createdAt,updatedAt", lines.get(0)),
-                () -> assertEquals("1,Pablo Motos,pablomotos,pablomotos@gmail.com,2023-01-01,2023-10-01", lines.get(1)),
-                () -> assertEquals("2,Juan Perez,juanperez,juanperez@gmail.com,2023-01-02,2023-10-02", lines.get(2))
+                () -> assertEquals("ID,Nombre,UserName,Email,createdAt,updatedAt", lines.getFirst()),
+                () -> assertEquals("1,Pablo Motos,pablomotos,pablomotos@gmail.com,2023-01-01T00:00,2023-10-01T00:00", lines.get(1)),
+                () -> assertEquals("2,Juan Perez,juanperez,juanperez@gmail.com,2023-01-02T00:00,2023-10-02T00:00", lines.get(2))
         );
     }
 
     @Test
-    void testImportFile_WithInvalidUsers() throws IOException {
+    void testImportFile_ConUsuarioInvalido() throws IOException {
         File invalidTestFile = File.createTempFile("InvalidStorageUsuarioCsvImplTest", ".csv");
         Files.write(invalidTestFile.toPath(),
-                "ID,Nombre,UserName,Email,createdAt,updatedAt\n1,John,joh,john@example.com,2023-10-01,2023-10-05\n2,J,js,jane@example.com,2023-09-01,2023-10-01".getBytes());
+                "ID,Nombre,UserName,Email,createdAt,updatedAt\n1,John,joh,john@example.com,2023-10-01T00:00:00,2023-10-05T00:00:00\n2,J,js,jane@example.com,2023-09-01T00:00:00,2023-10-01T00:00:00".getBytes());
 
         Observable<Usuario> usuarios = storage.importFile(invalidTestFile);
         List<Usuario> usuarioList = usuarios.toList().blockingGet();
